[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/subsystems/explosion_rod_mat.tres" type="Material" id=1]
[ext_resource path="res://scene/subsystems/explosion_rod.gd" type="Script" id=2]

[sub_resource type="CylinderMesh" id=1]
top_radius = 2.0
bottom_radius = 2.0

[sub_resource type="SphereMesh" id=2]
radius = 2.0
height = 4.0

[node name="explosion_rod" type="Spatial"]
script = ExtResource( 2 )

[node name="rod_core" type="Spatial" parent="."]

[node name="mesh" type="MeshInstance" parent="rod_core"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = ExtResource( 1 )

[node name="rod_ball" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
mesh = SubResource( 2 )
material/0 = ExtResource( 1 )

[node name="rod_ball2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
mesh = SubResource( 2 )
material/0 = ExtResource( 1 )
